namespace.yml
apiVersion: v1
kind: Namespace
metadata:
   name: ablancaszavala
   labels:
     tipo: aplicacion
