serviceMysql.yml
apiVersion: v1
kind: Service
metadata:
  name: mysqlservice
spec:
  type: NodePort
  ports:
    - targetPort: 3306
      port: 3306
      nodePort: 30008
  selector:
    env: productomysql
