servicePHP.yml
apiVersion: v1
kind: Service
metadata:
  name: phpwebservice
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30009
  selector:
    env: phpfrontend
