ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-backend
spec:
  defaultBackend:
    resource:
      apiGroup: app.ablancaszavala.com
      kind: StorageBucket
      name: static-assets
  rules:
    - http:
        paths:
          - path: /Index.php
            pathType: ImplementationSpecific
            backend:
              resource:
                apiGroup: app.ablancaszavala.com
                kind: StorageBucket
                name: icon-assets
